# nest-diary-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  webui-prototype.html
.github/workflows/: docker.yml
app/: __init__.py  auth.py  backup_service.py  config.py  main.py  models.py  paths.py  settings_service.py  version_service.py  web_auth.py
app/diary/: __init__.py  diary_service.py  markdown_store.py  migration_service.py  revision_service.py
app/media/: __init__.py  media_service.py
app/memory/: __init__.py  impression_service.py
app/search/: __init__.py  search_service.py
app/web/: __init__.py  routes.py
app/web/static/: app.css
app/web/templates/: _shell.html  dashboard.html  diary.html  diary_detail.html  impressions.html  login.html  media.html  panel.html  revisions.html  search.html  settings.html  write.html
deploy/1panel/nest-diary/: README.md  data.yml
deploy/1panel/nest-diary/0.1.0/: .env.sample  data.yml  docker-compose.yml
docs/: 使用手册.md
docs/plans/: 2026-05-13-nest-diary-dual-project.md  2026-05-13-小窝日记双项目计划.md
tests/: test_backup_service.py  test_impression_service.py  test_legacy_migration.py  test_markdown_store.py  test_paths.py  test_revision_and_media.py  test_search_service.py  test_settings_service.py  test_version_service.py  test_web_routes.py
