[project]
name = "nest-diary-service"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "jinja2>=3.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["web/templates/*.html", "web/static/*"]
